--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1> Brennen Karp </h1>
 <h2>Oregon State Universiy</h2>
 <p>Mac and cheese is amazing. It is creamy, cheesy, and yellow. If someone does not like mac and cheese they are most likely a mean person unless they a lactose intolerant.</p>
-<img width="400" src="https://images-gmi-pmc.edge-generalmills.com/0d175828-384a-44eb-abbb-0500c07cf397.jpg">
+<img src="https://images-gmi-pmc.edge-generalmills.com/0d175828-384a-44eb-abbb-0500c07cf397.jpg">
 <p>For more info on<a href="https://en.wikipedia.org/wiki/Macaroni_and_cheese"> mac and cheese</a></p>
 <h3>About The Author</h3>
 <p><a href=https://github.com/BrennenKarp> Github profile</a></p>
