changing website layout

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body id="home">
 <h1> Brennen Karp </h1>
 <h2>Oregon State Universiy</h2>
-<p>Mac and cheese is amazing. It is creamy, cheesy, and yellow. If someone does not like mac and cheese they are most likely a mean person unless they a lactose intolerant.</p>
-<img src="https://images-gmi-pmc.edge-generalmills.com/0d175828-384a-44eb-abbb-0500c07cf397.jpg">
-<p>For more info on<a href="https://en.wikipedia.org/wiki/Macaroni_and_cheese"> mac and cheese</a></p>
-<h3>About The Author</h3>
+<p>My name is Brennen Karp and I am a first year student at Oregon State University. I am a Computer Science major and couldn't be more excited. I love watching and playing sports, but I am a massive Portland Trailblazers fan and Portland Timbers fan. I also love the outdoors including hiking and</p>
+<img src="https://pbs.twimg.com/profile_images/856629049547935744/ScErYmP0_400x400.jpg">
 <p><a href=https://github.com/BrennenKarp> Github profile</a></p>
 <p><a href=https://stackoverflow.com/users/10438647/brennenk> Stackoverflow profile</a></p>
 </body>
