--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <meta charset="utf-8">
 	<title>My Portfolio</title>
@@ -9,9 +10,16 @@
 <body id="home">
 <h1> Brennen Karp </h1>
 <h2>Oregon State Universiy</h2>
-<p>My name is Brennen Karp and I am a first year student at Oregon State University. I am a Computer Science major and couldn't be more excited. I love watching and playing sports, but I am a massive Portland Trailblazers fan and Portland Timbers fan. I also love the outdoors including hiking and</p>
-<img src="https://pbs.twimg.com/profile_images/856629049547935744/ScErYmP0_400x400.jpg">
-<p><a href=https://github.com/BrennenKarp> Github profile</a></p>
-<p><a href=https://stackoverflow.com/users/10438647/brennenk> Stackoverflow profile</a></p>
+<p id="link 1"><a target="blank" href=https://github.com/BrennenKarp> Github profile</a></p>
+<p id="link 2"><a target="blank" href=https://stackoverflow.com/users/10438647/brennenk> Stackoverflow profile</a></p>
+<p id="main">My name is Brennen Karp and I am a first year student at Oregon State University.
+     I am a Computer Science major and couldn't be more excited. I love watching and playing 
+     sports, but I am a massive Portland Trailblazers fan and Portland Timbers fan. I also love
+     <img id="OSU" src="https://pbs.twimg.com/profile_images/856629049547935744/ScErYmP0_400x400.jpg">
+      the outdoors including hiking and camping. I have played just about every sport competetivly, 
+      however my favorite sport to play is soccer. I played soccer for my highschool all but my senior 
+      year. I went to Westview highschool in Portland, Oregon. I loved growing up in Portland but I 
+      love Bend much more.</p>
+
 </body>
 </html>
