--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="stylesheet.css" rel="stylesheet">
+    
   </head>
 
   <body>
@@ -40,6 +41,8 @@
             love Bend much more.</p>
           <p><a class="Link" href="https://github.com/BrennenKarp" role="button">Git hub profile &raquo;</a></p>
           <p><a class="Link" href="https://stackoverflow.com/users/10438647/brennenk" role="button">Stack overflow profile &raquo;</a></p>
+          <p><a class="Link" href="https:BrennenKarp.github.io/zagster-client" role="button">Zagster Data &raquo;</a></p>
+          <p><a class="Link" href="https://docs.google.com/document/d/e/2PACX-1vTBbeHJ_zjG96aSlFM9IAJb25aw9IiM26vk7wakd2cUY610HEnCWXeJ3ZzuzqvzFJxf178sw7KDVVYF/pub" role=button>My Resume &raquo;</a></p>
         </div>
       </div>
 
