--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             love Bend much more.</p>
           <p><a class="Link" href="https://github.com/BrennenKarp" role=button>Git hub profile &raquo;</a></p>
           <p><a class="Link" href="https://stackoverflow.com/users/10438647/brennenk" role=button>Stack overflow profile &raquo;</a></p>
-          <p><a class="Link" href="https://BrennenKarp.github.io/zagster-client" role=button>Zagster Data 
+          <p><a class="Link" href="https://BrennenKarp.github.io/zagster-client/" role=button>Zagster Data 
           &raquo;</a></p>
           <p><a class="Link" href="https://docs.google.com/document/d/e/2PACX-1vTBbeHJ_zjG96aSlFM9IAJb25aw9IiM26vk7wakd2cUY610HEnCWXeJ3ZzuzqvzFJxf178sw7KDVVYF/pub" role=button>My Resume &raquo;</a></p>
         </div>
