--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   </head>
 
   <body>
-
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Portfolio</a>
+      <a class="navbar-brand" href="mailto:karpb@oregonstate.edu">Contact Me</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,23 +29,24 @@
         <div class="container">
           <h1 class="display-3">Brennen Karp</h1>
           <p class="main">My name is Brennen Karp and I am a first-year student at Oregon State University. I am a Computer Science major and couldn't be more excited. I love watching and playing sports, but I am a massive Portland Trailblazers fan and Portland Timbers fan. I also love the outdoors including hiking and camping. I have played just about every sport competitively, however, my favorite sport to play is soccer. I played soccer for my high school all but my senior year. I went to Westview high school in Portland, Oregon. I loved growing up in Portland but I enjoy Bend much more.</p> 
+          <p class="main">
+            This portfolio was created to contain my projects over my years at Oregon State and after. It also contains the links to my resume, Github account, and Stack Overflow account for any possible employers. Throughout the years this page will continue to fill with school projects and side projects. In the top right there is also a link to my Oregon State email in case you need to contact me. 
+          </p>
         <p><a class="Link" href="https://docs.google.com/document/d/e/2PACX-1vTBbeHJ_zjG96aSlFM9IAJb25aw9IiM26vk7wakd2cUY610HEnCWXeJ3ZzuzqvzFJxf178sw7KDVVYF/pub" role=button>My Resume &raquo;</a></p>
     </main>
     <!-- Places links in columns 
     Source: "https://www.w3schools.com/howto/howto_css_images_side_by_side.asp" -->
     <footer class="container">
+        <div class="column"></div>
       <p class="stuff">Links:</p>
       <div class="row">
-        <div class="column">
           <figure> 
             <a class="Link2"
             href="https://github.com/BrennenKarp"><img class="link1" src="github.png" alt="github"/>
             <!-- Allows for text to be directly below the image 
             Source: "https://stackoverflow.com/questions/1225130/how-can-i-align-text-directly-beneath-an-image" -->
             <figcaption> Github Account </figcaption></a>
-          </figure>
-        </div>
-        <div class="column">
+            </figure>
         <figure>
           <a class="Link2"
           href="https://stackoverflow.com/users/10438647/brennenk"><img class="link2" src="stackoverflow.png" alt="stackoverflow"/>
@@ -55,10 +54,18 @@
         </figure>
        </div>
         <div class="column">
+        <p class="stuff">Projects:</p>
+        <div class="row">
         <figure>
-          <a class="Link2" href="https://BrennenKarp.github.io/zagster-client/"><img class="link3" src="zagster-client.png" alt="zagster"/>
+          <a class="Link2" href="https://BrennenKarp.github.io/zagster-client/"><img class="link1" src="zagster-data.png" alt="zagster"/>
           <figcaption> Zagster Data Visualization </figcaption></a>
-        </figure>
+          </figure>
+        <figure>
+            <a class="Link2"
+            href="https://github.com/BrennenKarp?tab=repositories">
+            <img class="link1" src="projects.png" alt="zagster"/>
+            <figcaption> Coming Soon </figcaption></a>
+          </figure>
         </div>
       </div>
   </div>
