--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <body>
       <a class="navbar-brand" href="mailto:karpb@oregonstate.edu">Contact Me</a>
+      <a class="navbar-brand" href="https://github.com/BrennenKarp/BrennenKarp.github.io">Portfolio Repostitory</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
